--- a/css/pages/_searchPet.scss
+++ b/css/pages/_searchPet.scss
@@ -29,6 +29,7 @@
 }
 
 //Filter options
+
 .filter-options{
 
     a{
@@ -45,6 +46,12 @@
         display: flex;
         justify-content: center;
         margin-left: 3em;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+        // Acomodar modo responsivo en pantalla pequeña.
+
+        img{
+            padding-right: 1em;
+        }
     }
 
     .pet-tag{
@@ -55,6 +62,7 @@
         align-items: center;
         justify-content: center;
         width: 10em;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 
         .text-tag{
             margin-top: auto;
@@ -145,6 +153,10 @@
         min-height: 20px;
         min-width: 85px;
         text-align: center;
+        border-color: white;
+        border: none;
+        box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
+
     }
 
     .quicksand-regular-white-20px {
@@ -172,26 +184,6 @@
         font-style: normal;
         font-weight: 400;
     }
-}
-
-// Pagination
-
-.pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-}
-
-
-.pagination a.active {
-    background-color:var(--chetwode-blue);
-    color: white;
-}
-
-.pagination a:hover:not(.active) {
-    background-color: var(--cyan);
 }
 
 :root {
