--- a/css/pages/_formShelter.scss
+++ b/css/pages/_formShelter.scss
@@ -2,7 +2,7 @@
 
 .file-upload {
     background-color: white;
-    width: 25em;
+    width: 80%;
     margin: 0 auto;
     padding: 20px;
     border-radius: 15px;
@@ -101,6 +101,6 @@
 
 :root {
     --chetwode-blue: rgba(118, 126, 237, 1);
-    --white-lilac: rgba(246, 247, 251, 1);
+    --white-lilac: rgb(24, 38, 95);
     --porsche: rgba(236, 163, 107, 1);
 }
