--- a/css/pages/_searchPet.scss
+++ b/css/pages/_searchPet.scss
@@ -134,6 +134,8 @@
     padding: 36px 0;
     margin-left: auto;
     margin-right: auto;
+    width: 90%;
+
 
     a{
         text-decoration: none;
