--- a/css/pages/_profileShelterEdit.scss
+++ b/css/pages/_profileShelterEdit.scss
@@ -13,6 +13,7 @@
             top: -8em;
             display: flex;
             justify-content: center;
+            padding-left: 2em;
 
             .shelter-image {
                 height:240px;
